# picture_filters

./: CMakeLists.txt  filter_linear.cu  filter_median.cu  histogram_brightness.cu  main.cu
